# src/wallet/dto/withdraw-trade.dto.ts
@@ -1,0 +1,20 @@
+import {
+  IsNumber,
+  IsPositive,
+  Min,
+  IsOptional,
+  IsString,
+  MaxLength,
+} from 'class-validator';
+
+export class WithdrawTradeDto {
+  @IsNumber()
+  @IsPositive()
+  @Min(1)
+  amount: number;
+
+  @IsOptional()
+  @IsString()
+  @MaxLength(500)
+  description?: string;
+}
